fix text overflow

--- a/app/assets/stylesheets/client.scss
+++ b/app/assets/stylesheets/client.scss
@@ -62,7 +62,7 @@
 .client-profile {
   .card {
     margin-top: 2em;
-    width: 75%;
+    width: 80%;
     margin-bottom: 2em;
   }
 }
